# JC3248W535_LVGL9_platformio

./: Base info.txt  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-jc3248w535
.github/: copilot-instructions.md
LightSwitch/include/: AXS15231B_touch.h  AppConfig.h  AppUI.h  DisplayManager.h  lv_conf.h
LightSwitch/src/: AXS15231B_JC3248.cpp  DisplayManager.cpp  main.cpp  main_canvas.cpp
LightSwitchEez/: LightSwitchEez.eez-project  LightSwitchEez.eez-project-ui-state
LightSwitchEez/.docker-build-output/: index.js  index.wasm
LightSwitchEez/src/ui/: .eez-project-build  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_back_main.c  ui_image_shooting_star_1.c  ui_image_shooting_star_10.c  ui_image_shooting_star_2.c  ui_image_shooting_star_3.c  ui_image_shooting_star_4.c  ui_image_shooting_star_5.c  ui_image_shooting_star_6.c  ui_image_shooting_star_7.c  ui_image_shooting_star_8.c  ui_image_shooting_star_9.c  ui_image_star1.c  ui_image_star10.c  ui_image_star2.c  ui_image_star3.c  ui_image_star4.c  ui_image_star5.c  ui_image_star6.c  ui_image_star7.c  ui_image_star8.c  ui_image_star9.c  vars.h
include/: AXS15231B_JC3248.h  AppConfig.h  DisplayManager.h  SplashScreen.h  StarAnimations.h  lv_conf.h
lib/AXS15231B/include/: AXS15231B_Display.h  AXS15231B_Touch_IDF.h
lib/AXS15231B/src/: AXS15231B_Touch_IDF.cpp
src/: AXS15231B_Display.cpp  AXS15231B_touch.cpp  AppUI.cpp  CMakeLists.txt  DisplayManager.cpp  SplashScreen.cpp  StarAnimations.cpp  main.cpp  ui_actions.cpp
